userPage go fly

--- a/src/main/resources/templates/loggedInUser.html
+++ b/src/main/resources/templates/loggedInUser.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
-    <link th:href="@{signup.css}" href="../static/signup.css" rel="stylesheet" type="text/css" media="screen" />
+    <link th:href="@{loggedin.css}" href="../static/loggedin.css" rel="stylesheet" type="text/css" media="screen" />
 
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
@@ -47,10 +47,8 @@
         <div class="panel panel-default">
             <div class="panel-heading">  <h4 >Notandasíða</h4></div>
             <div class="panel-body">
-                <div class="col-md-4 col-xs-12 col-sm-6 col-lg-4">
-
-                    <img  class="img-circle img-responsive" alt="User Pic" src="https://x1.xingassets.com/assets/frontend_minified/img/users/nobody_m.original.jpg" id="profile-image1">
-
+                <div class="profilePhoto">
+                    <img class="img-circle img-responsive" alt="User Pic" src="https://x1.xingassets.com/assets/frontend_minified/img/users/nobody_m.original.jpg" id="profile-image1">
                 </div>
 
             </div>
