--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -55,8 +55,7 @@
 <h2>Search for user</h2>
 
     <form action="#" th:action="@{/users}" th:object="${users}" method="post">
-        <input type="text" th:field="${userName}">
-        <!-- <p th:if="${#fields.hasErrors('${userName}')}" th:errors="*{userName}">Error?</p> -->
+        <input type="text" th:field="*{userName}">
         <input type="submit" value="Search">
     </form>
 
@@ -67,12 +66,12 @@
        <!-- <th>Email</th> -->
         <th>Original Index</th>
         <th>User Info</th>
-        <th>trans Index</th>
+        <th>Trans Index</th>
     </tr>
 
     <tr id="dbTable" th:each="user : ${users}">
         <!-- <td th:text="${user.id}">Id</td> Ekki sýna id users í search? -->
-        <td th:text="${user.userName}">Name</td>
+        <td th:text="*{user.userName}">Name</td>
         <!-- <td th:text="${user.email}">Email</td> Ekki sýna email users í search? -->
         <td th:text="${user.originalIndex}">Original Index</td>
         <td th:text="${user.userInfo}">Info</td>
