--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -55,7 +55,7 @@
 <h2>Search for user</h2>
 
     <form action="#" th:action="@{/users}" th:object="${users}" method="post">
-        <input type="text" th:field="${user.userName}">
+        <input type="text" th:field="*{userName}">
         <input type="submit" value="Search">
     </form>
 
