--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -17,15 +17,12 @@
 <!-- Navigation -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" id="mainNav">
     <div class="container">
-        <a class="navbar-brand js-scroll-trigger" href="#page-top">GAIA</a>
+        <a class="navbar-brand js-scroll-trigger" href="/">GAIA</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
-                <li class="nav-item">
-                    <a class="nav-link js-scroll-trigger" href="#about">Um Gaia</a>
-                </li>
                 <li class="nav-item">
                     <a class="nav-link js-scroll-trigger" href="/challenges">Skoða Áskoranir</a>
                 </li>
@@ -50,7 +47,7 @@
     <h1>óó nei!</h1>
     <h1>Hvernig lentir þú hér?</h1>
 
-    <input type="button" value="Go back!" onclick="history.back()">
+    <input type="button" value="Til Baka!" onclick="history.back()">
 
 </div>
 
