--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -21,15 +21,12 @@
 <!-- Navigation -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" id="mainNav">
     <div class="container">
-        <a class="navbar-brand js-scroll-trigger" href="#page-top">GAIA</a>
+        <a class="navbar-brand js-scroll-trigger" href="/">GAIA</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
-                <li class="nav-item">
-                    <a class="nav-link js-scroll-trigger" href="./#about">Um Gaia</a>
-                </li>
                 <li class="nav-item">
                     <a class="nav-link js-scroll-trigger" href="/challenges">Skoða Áskoranir</a>
                 </li>
@@ -55,7 +52,7 @@
 <h2>Search for user</h2>
 
     <form action="#" th:action="@{/users}" th:object="${users}" method="post">
-        <input type="text" th:field="${user.userName}">
+        <input type="text" th:field="${users.userName}">
         <input type="submit" value="Search">
     </form>
 
