--- a/src/main/resources/templates/challenges.html
+++ b/src/main/resources/templates/challenges.html
@@ -68,6 +68,8 @@
                                 <div class="card-body text-center">
                                     <p><img class=" img-fluid" src="https://images.glaciermedia.ca/polopoly_fs/1.2271675.1465244454!/fileImage/httpImage/image.jpg_gen/derivatives/landscape_804/tree-seedling.jpg" alt="card image"></p>
                                     <h4 class="card-title" th:text="${challenge.title}"></h4>
+                                    <h7>Carbon fótspor fyrir Áskorun</h7>
+                                    <h6 class="card-text" th:text="${challenge.carbonIndex}"></h6>
                                 </div>
                             </div>
                         </div>
