Sign out kannski komið

--- a/src/main/resources/templates/loggedInUser.html
+++ b/src/main/resources/templates/loggedInUser.html
@@ -27,7 +27,7 @@
                     <a class="nav-link js-scroll-trigger" href="/challenges">Skoða Áskoranir</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link js-scroll-trigger" href="/signup">Búa til aðgang</a>
+                    <a class="nav-link js-scroll-trigger" href="/" th:action="@{/logout}">Skrá Út</a>
                 </li>
             </ul>
         </div>
