--- a/src/main/resources/templates/loggedInUser.html
+++ b/src/main/resources/templates/loggedInUser.html
@@ -112,17 +112,12 @@
                     <span>Áskorarnir mínar!</span>
                     <div class="container">
 
-                     <div>
-                         <form action="#" th:action="@{/showChallenges}"  th:object="${challenges}" method="post">
-                             <a th:href="@{/showChallenges}" class="btn btn-primary btn-sm"><i class="fa fa-plus"></i></a>
-                         </form>
-                     </div>
-
                         <div class="container">
 
                             <tr th:each="challenge : ${challenges}">
 
-                                <td th:text="${challenge.id}">Challenge Id</td>
+                                <p>Challenge Id</p>
+                                <td th:text="${challenge.id}"></td>
 
                             </tr>
                         </div>
