--- a/src/main/resources/templates/SignUp.html
+++ b/src/main/resources/templates/SignUp.html
@@ -23,7 +23,7 @@
                     <a class="nav-link js-scroll-trigger" href="/challenges">Skoða Áskoranir</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link js-scroll-trigger" href="/signup">Búa til aðgang</a>
+                    <a class="nav-link js-scroll-trigger" href="/login">Innskrá</a>
                 </li>
             </ul>
         </div>
