--- a/src/main/resources/templates/loggedInUser.html
+++ b/src/main/resources/templates/loggedInUser.html
@@ -57,6 +57,9 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
+                    <a class="nav-link js-scroll-trigger" href="/users">Leita að notanda</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link js-scroll-trigger" href="/challenges">Skoða Áskoranir</a>
                 </li>
                 <li class="nav-item">
@@ -112,8 +115,8 @@
                             <div class="card" style="width: 18rem;">
                                 <div class="card-body">
                                     <h6 class="card-title" th:text="${user.originalIndex}"></h6>
-                                    <h5 class="card-subtitle mb-2 text-muted">Uppranlegt carbon fótspor</h5>
-                                    <p>Þessi tala stendur fyrir grömm af Co2 per dag miðað við svör notanda þegar hann skráði sig á síðun.</p>
+                                    <h5 class="card-subtitle mb-2 text-muted">Upprunalegt carbon fótspor</h5>
+                                    <p>Þessi tala stendur fyrir grömm af Co2 per dag miðað við svör notanda þegar hann skráði sig á síðuna.</p>
                                 </div>
                             </div>
                         </div>
