Almennari error síða

--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -44,8 +44,8 @@
     </div>
 </header>
 <div class="secondBody">
-    <h1>óó nei!</h1>
-    <h1>Hvernig lentir þú hér?</h1>
+    <h1>Vandræðalegt..</h1>
+    <h1>Villa hefur komið upp!</h1>
 
     <input type="button" value="Til Baka!" onclick="history.back()">
 
